Adjust for deprecations in JDK 21